--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -59,7 +59,7 @@
                         listItems: {
                             classes: "govuk-!-margin-top-4 govuk-!-margin-bottom-2",
                             items: [{
-                                html: '<a href="/person/'+ nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + offence.index + '/update-offence-outcome">Update outcome</a>'
+                                html: '<a href="/person/'+ nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + offence.index + '/update-offence-outcome" data-qa="update-outcome-link-'+ offence.index +'">Update outcome</a>'
                             }]
                         }
                     })
