--- a/server/views/pages/sentencing/sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/sentence-consecutive-to.njk
@@ -60,10 +60,10 @@
                         {% endfor %}
                     {% endif %}
 
-                    {% if sentencesToChainTo.appearances.length %}
+                    {% if sentencedAppearancesOnOtherCases.length %}
                         <h2 class="govuk-heading-m" data-qa="sentencesOnOtherCasesHeader">Sentences on other cases</h2>
 
-                        {% for appearance in sentencesToChainTo.appearances | sortByAppearanceDate %}
+                        {% for appearance in sentencedAppearancesOnOtherCases | sortByAppearanceDate %}
                             <div class="govuk-!-margin-bottom-6">
                                 <h3 class="govuk-heading-s"> {{ appearance.courtCaseReference + ' at ' if appearance.courtCaseReference }}{{ courtMap[appearance.courtCode] }}
                                     on {{ appearance.appearanceDate | formatDate }}</h3>
