--- a/server/views/pages/sentencing/appearance-details.njk
+++ b/server/views/pages/sentencing/appearance-details.njk
@@ -97,7 +97,7 @@
                 text: overallSentenceLengthComparison.custodialLength | formatLengthsWithoutPeriodOrder
             }
     }
-    ] %}    
+    ] %}
 
 {% set documentSummaryRows = [] %}
 
@@ -271,18 +271,18 @@
                     sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                     fineAmount: offence.sentence.fineAmount,
                     consecutiveConcurrentLink: {
-                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/select-consecutive-concurrent",
+                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.chargeUuid + "/select-consecutive-concurrent",
                         text: 'Select consecutive or current'
                     } if offence.sentence,
                     actions: {
                         items: [
                             {
-                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/load-edit-offence",
+                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.chargeUuid + "/load-edit-offence",
                                 text: "Edit",
                                 visuallyHiddenText: "edit offence"
                             },
                             {
-                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/" + offence.index + "/check-delete-offence",
+                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/sentencing/offences/" + offence.chargeUuid + "/check-delete-offence",
                                 text: "Delete",
                                 visuallyHiddenText: "delete offence"
                             }
@@ -300,7 +300,7 @@
                             }
                         }) }}
             {% endfor %}
-            
+
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-details-edit">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <div class="govuk-button-group">
